--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Next Starter",
-  "short_name": "Next Starter",
+  "name": "Idea Factory",
+  "short_name": "Idea Factory",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
